--- a/src/html/layouts/master.njk
+++ b/src/html/layouts/master.njk
@@ -160,13 +160,13 @@
         <a href="https://www.kudyznudy.cz/?utm_source=kzn&amp;utm_medium=partneri_kzn&amp;utm_campaign=banner"
            title="Kudyznudy.cz - tipy na výlet" target="_blank">
           <img src="https://www.kudyznudy.cz/getmedia/849ee326-f95a-43ce-812c-be9c5817c81e/KzN_banner_234x60.jpg.aspx"
-               width="234" height="60" alt="Kudyznudy.cz - tipy na výlet">
+               width="234" height="60" alt="Kudyznudy.cz - tipy na výlet" loading="lazy">
         </a>
       </div>
       <div>
         <small class="partner">Studnice Fest podporuje Pardubický kraj</small><br>
         <a href="https://www.pardubickykraj.cz/">
-          <img src="{{ "pardubicky-kraj.png" | assetUrl("images") }}" width="226" height="50" alt="Pardubický kraj"></a>
+          <img src="{{ "pardubicky-kraj.png" | assetUrl("images") }}" width="226" height="50" alt="Pardubický kraj" loading="lazy"></a>
       </div>
     </div>
     <div></div>
