--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -259,7 +259,7 @@ section p {
 
     h3 {
       font-size: 1.75em;
-      line-height: 10;
+      line-height: 12;
       background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.43) 100%) 50% / cover no-repeat;
       color: #fff;
       padding: 1em;
@@ -277,6 +277,16 @@ section p {
 
     &:hover img {
       scale: 1.2;
+    }
+
+    &::before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: assetUrl("images", "img-border.svg") no-repeat;
+      background-size: cover;
+      z-index: 1;
     }
   }
 }
