--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -245,11 +245,12 @@ section p {
 .artists-list {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(313px, 1fr));
+  grid-template-rows: repeat(auto-fill, minmax(313px, 1fr));
   gap: 1em;
 
   article {
     container-type: inline-size;
-    overflow: hidden;
+    overflow: clip;
     display: grid;
     grid: [stack] 1fr / [stack] 1fr;
 
@@ -259,13 +260,12 @@ section p {
 
     h3 {
       font-size: 1.75em;
-      line-height: 12;
+      line-height: 2;
       background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.43) 100%) 50% / cover no-repeat;
       color: #fff;
       padding: 1em;
       margin: 0;
       box-sizing: border-box;
-      height: 50cqh;
       align-self: end;
     }
     img {
@@ -281,12 +281,11 @@ section p {
 
     &::before {
       content: "";
-      position: absolute;
-      width: 100%;
-      height: 100%;
+      grid-area: stack;
+      display: block;
       background: assetUrl("images", "img-border.svg") no-repeat;
       background-size: cover;
-      z-index: 1;
+      order: 10;
     }
   }
 }
