--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -244,11 +244,15 @@ section p {
 
 .artists-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(313px, 1fr));
-  grid-template-rows: repeat(auto-fill, minmax(313px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+  grid-template-rows: repeat(auto-fill, minmax(140px, 1fr));
+  grid-auto-flow: dense;
   gap: 1em;
 
   article {
+    grid-column: span 2;
+    grid-row: span 2;
+
     container-type: inline-size;
     overflow: clip;
     display: grid;
@@ -273,6 +277,18 @@ section p {
       height: auto;
       z-index: -1;
       transition: scale 200ms ease-in-out;
+    }
+
+    &:first-of-type {
+      grid-row-start: 2;
+      grid-row-end: 4;
+    }
+    &:nth-of-type(2) {
+       grid-row-end: 3;
+     }
+    &:nth-of-type(3) {
+      grid-row-start: 2;
+      grid-row-end: 4;
     }
 
     &:hover img {
