--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -243,10 +243,15 @@ section p {
 }
 
 .artists-list {
+  container-type: inline-size;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
-  grid-template-rows: repeat(auto-fill, minmax(140px, 1fr));
-  grid-auto-flow: dense;
+  grid-template-columns: repeat(2, 1fr);
+  @media screen and (min-width: 481px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+  @media screen and (min-width: 831px) {
+    grid-template-columns: repeat(6, 1fr);
+  }
   gap: 1em;
 
   article {
@@ -286,9 +291,11 @@ section p {
     &:nth-of-type(2) {
        grid-row-end: 3;
      }
-    &:nth-of-type(3) {
-      grid-row-start: 2;
-      grid-row-end: 4;
+    @container (min-width: 800px) {
+      &:nth-of-type(3) {
+        grid-row-start: 2;
+        grid-row-end: 4;
+      }
     }
 
     &:hover img {
