Fix map init race condition in Safari and Firefox

--- a/src/html/layouts/master.njk
+++ b/src/html/layouts/master.njk
@@ -176,7 +176,7 @@
 {% block javascript %}
 {% endblock %}
 <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
-        integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg=" crossorigin async></script>
+        integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg=" crossorigin defer></script>
 <script type="module">
   import { html } from "https://unpkg.com/uhtml@4.5.9/node.js";
 
