--- a/src/html/shared/styles.njk
+++ b/src/html/shared/styles.njk
@@ -1,4 +1,5 @@
-<link rel="preload" href="{{ "barrio-regular.latin.woff2" | assetUrl("fonts") }}" as="font" crossorigin>
+<link rel="preload" href="{{ "barrio-regular.latin.woff2" | assetUrl("fonts") }}" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="{{ "index.css" | assetUrl("stylesheets") }}" as="style">
 <link rel="preload" href="{{ "border-top.svg" | assetUrl("images") }}" as="image">
 <link rel="preload" href="{{ "border-bottom.svg" | assetUrl("images") }}" as="image">
 <style>
