--- a/src/html/shared/styles.njk
+++ b/src/html/shared/styles.njk
@@ -2,6 +2,9 @@
 <link rel="preload" href="{{ "index.css" | assetUrl("stylesheets") }}" as="style">
 <link rel="preload" href="{{ "border-top.svg" | assetUrl("images") }}" as="image">
 <link rel="preload" href="{{ "border-bottom.svg" | assetUrl("images") }}" as="image">
+<link rel="preload" href="{{ "heading-bg.svg" | assetUrl("images") }}" as="image">
+<link rel="preload" href="{{ "horizontal-rule.svg" | assetUrl("images") }}" as="image">
+<link rel="preload" href="{{ "img-border.svg" | assetUrl("images") }}" as="image">
 <style>
   @font-face {
     font-family: Barrio;
