--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -206,7 +206,7 @@ section p {
       display: grid;
       grid: [stack] 1fr / [stack] 1fr;
       filter: saturate(0.3);
-      transition: filter 0.2s ease-in-out;
+      transition: filter 200ms ease-in-out;
       text-decoration: none;
 
       &:hover {
@@ -222,6 +222,7 @@ section p {
       width: 100%;
       height: auto;
       z-index: -1;
+      order: 1;
     }
 
     time {
@@ -229,10 +230,12 @@ section p {
       font-weight: 700;
       text-align: center;
       line-height: 1.2;
-      width: 45cqi;
+      width: 45%;
       background-image: linear-gradient(90deg, #235728, #316731);
-      margin: 93cqi auto 0;
+      margin: 93% auto 0;
       color: #fff;
+      z-index: 1;
+      order: 2;
     }
   }
 
@@ -277,12 +280,13 @@ section p {
       box-sizing: border-box;
       align-self: end;
       order: 2;
+      z-index: 1;
     }
     img {
       order: 1;
       width: 100%;
       height: auto;
-      transition: scale 200ms ease-in-out;
+      transition: scale 300ms ease-in-out;
       z-index: -1;
     }
 
@@ -313,6 +317,7 @@ section p {
       background: assetUrl("images", "img-border.svg") no-repeat;
       background-size: cover;
       order: 10;
+      z-index: 2;
     }
   }
 }
