--- a/src/html/layouts/master.njk
+++ b/src/html/layouts/master.njk
@@ -195,7 +195,7 @@
       return html`
         <div>
           <a href="https://mapy.cz/" target="_blank" @click=${e => e.stopPropagation()}>
-            <img alt="Mapy.cz" src="https://api.mapy.cz/img/api/logo.svg"></a>
+            <img alt="Mapy.cz" src="https://api.mapy.cz/img/api/logo.svg" loading="lazy"></a>
         </div>
       `;
     },
