--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -10,7 +10,7 @@
 
 :root {
   --main-font: 16px Inter, Roboto, 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', Arial, sans-serif;
-  --accented-font: Barrio, 'Segoe Print', 'Bradley Hand', Chilanka, TSCu_Comic, casual, cursive;
+  --accented-font: Bangers, 'Segoe Print', 'Bradley Hand', Chilanka, TSCu_Comic, casual, cursive;
 
   --background-color: #fff;
   --text-color: #000;
@@ -61,7 +61,7 @@ h1, h2, h3 {
 }
 
 h2 {
-  font-size: 1.75em;
+  font-size: 1.9em;
 }
 
 hr {
@@ -272,7 +272,8 @@ section p {
 
     h3 {
       font-size: 1.75em;
-      line-height: 2;
+      font-weight: 500;
+      line-height: 1.35;
       background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.43) 100%) 50% / cover no-repeat;
       color: #fff;
       padding: 1em;
