--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -12,6 +12,8 @@
   --main-font: 16px Inter, Roboto, 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', Arial, sans-serif;
   --accented-font: Bangers, 'Segoe Print', 'Bradley Hand', Chilanka, TSCu_Comic, casual, cursive;
 
+  --corner-radius: 15px;
+
   --background-color: #fff;
   --text-color: #000;
   --accent-color: #E1E91B;
@@ -201,10 +203,14 @@ section p {
   article {
     container-type: inline-size;
     container-name: --news;
+    border-radius: var(--corner-radius);
+    background-color: #000;
+    color: #fff;
+    padding: 10px;
 
     a {
       display: grid;
-      grid: [stack] 1fr / [stack] 1fr;
+      grid-auto-flow: row;
       filter: saturate(0.3);
       transition: filter 200ms ease-in-out;
       text-decoration: none;
@@ -212,36 +218,41 @@ section p {
       &:hover {
         filter: saturate(1);
       }
-
-      > * {
-        grid-area: 1/1;
-      }
     }
 
     img {
       width: 100%;
       height: auto;
+      clip-path: xywh(0 0 100% 92% round 15px);
       z-index: -1;
       order: 1;
+      border-radius: var(--corner-radius);
     }
 
     time {
-      font-size: 5cqi;
+      font-family: var(--accented-font);
       font-weight: 700;
-      text-align: center;
       line-height: 1.2;
-      width: 45%;
-      background-image: linear-gradient(90deg, #235728, #316731);
-      margin: 93% auto 0;
       color: #fff;
       z-index: 1;
       order: 2;
+    }
+
+    p {
+      text-align: left;
     }
   }
 
   article:first-of-type {
     grid-column: span 2;
     grid-row: span 2;
+  }
+
+  article+article p {
+    font-size: 1em;
+    max-height: 4.2em;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
 
@@ -262,13 +273,13 @@ section p {
     grid-row: span 2;
 
     container-type: inline-size;
-    overflow: clip;
     display: grid;
-    grid: [stack] 1fr / [stack] 1fr;
+    grid-auto-flow: row;
 
-    & > * {
-      grid-area: stack;
-    }
+    padding: 10px;
+    background-color: #000;
+    color: #fff;
+    border-radius: var(--corner-radius);
 
     h3 {
       font-size: 1.75em;
@@ -276,19 +287,23 @@ section p {
       line-height: 1.35;
       background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.43) 100%) 50% / cover no-repeat;
       color: #fff;
-      padding: 1em;
       margin: 0;
-      box-sizing: border-box;
-      align-self: end;
-      order: 2;
-      z-index: 1;
+      order: 3;
     }
     img {
       order: 1;
       width: 100%;
       height: auto;
       transition: scale 300ms ease-in-out;
-      z-index: -1;
+      border-radius: var(--corner-radius);
+    }
+    p {
+      color: rgba(255, 255, 255, 0.77);
+      font-size: 0.75em;
+      font-weight: 800;
+      text-align: left;
+      margin: 0.5em 0 0.75em;
+      order: 2;
     }
 
     &:first-of-type {
@@ -305,20 +320,6 @@ section p {
         grid-row-start: 2;
         grid-row-end: 4;
       }
-    }
-
-    &:hover img {
-      scale: 1.2;
-    }
-
-    &::before {
-      content: "";
-      grid-area: stack;
-      display: block;
-      background: assetUrl("images", "img-border.svg") no-repeat;
-      background-size: cover;
-      order: 10;
-      z-index: 2;
     }
   }
 }
