--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -9,11 +9,10 @@
 {% endblock %}
 {% block content %}
   <main>
-    <section>
+    <section class="news-list">
       <header>
         <h2>Novinky</h2>
       </header>
-      <div class="news-list">
         {% for post in news %}
           {% set image = images[post.image]["public_id"] %}
           <article>
@@ -26,19 +25,17 @@
             {% endmarkdown %}
           </article>
         {% endfor %}
-      </div>
-      <a href="/novinky/" class="button">Zobrazit všechny novinky</a>
+      <a href="/novinky/" class="cta">Zobrazit všechny novinky</a>
     </section>
     <section>
       <header>
         <h2>Info</h2>
       </header>
     </section>
-    <section>
+    <section class="artists-list">
       <header>
-        <h2>Vystoupí</h2>
+        <h2>Na 18. ročníku vystoupí</h2>
       </header>
-      <div class="artists-list">
         {% for key in event.artists %}
           {% set artist = artists[key] %}
           {% set image = images["artists/" + artist.image]["public_id"] %}
@@ -49,7 +46,6 @@
             <p>vystoupí v <time>{{ ts.day }} ve {{ ts.time }}</time></p>
           </article>
         {% endfor %}
-      </div>
     </section>
     <section>
       <header>
