--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -16,8 +16,8 @@
 
   --background-color: #fff;
   --text-color: #000;
-  --accent-color: #E1E91B;
-  --accent2-color: #E9721B;
+  --accent-color: #27933F;
+  --accent2-color: #0C6523;
 
   --border-top-image: #{assetUrl("images", "border-top.svg")};
   --border-bottom-image: #{assetUrl("images", "border-bottom.svg")};
@@ -71,6 +71,40 @@ hr {
   height: 6px;
   border: 0;
   background-image: var(--hr-border-image);
+}
+
+a.cta {
+  display: inline-block;
+  position: relative;
+  text-transform: uppercase;
+  padding: 0.6em 2em;
+  color: #fff;
+  background-color: var(--accent-color);
+  font-size: 0.8em;
+  font-weight: bold;
+  letter-spacing: 0.1em;
+  text-decoration: none;
+  line-height: 2;
+  margin: 1em 0;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: -9px;
+    left: 8px;
+    width: calc(100% - 14px);
+    height: calc(100% + 20px);
+    background: assetUrl("images", "cta-bg.svg") no-repeat;
+    background-size: contain;
+    transition: transform 200ms ease-in-out;
+  }
+
+  &:hover {
+    background-color: var(--accent2-color);
+    &::before {
+      transform: scaleX(-1);
+    }
+  }
 }
 
 main, section, body > header, body > footer {
@@ -130,50 +164,6 @@ body > header {
   text-align: center;
 }
 
-section > header {
-  display: grid;
-  container-type: inline-size;
-
-  h2 {
-    place-self: center;
-    anchor-name: --heading;
-
-    &::before {
-      --border-color: var(--accent-color);
-      content: "";
-      position: absolute;
-      position-anchor: --heading;
-      width: calc(50cqw + anchor-size(width) / 2 + 1em);
-      max-width: 100%;
-      height: 17px;
-      border-top: 2px solid;
-      border-left: 2px solid;
-      border-image-source: var(--border-top-image);
-      border-image-slice: fill 0;
-      left: calc(anchor(left) - 1em);
-      bottom: calc(anchor(top) - 0.5ex);
-      z-index: -1;
-    }
-
-    &::after {
-      --border-color: var(--text-color);
-      content: "";
-      position: absolute;
-      position-anchor: --heading;
-      max-width: 100%;
-      width: calc(50cqw + anchor-size(width) / 2 + 1em);
-      height: 17px;
-      border-bottom: 2px solid;
-      border-right: 2px solid;
-      border-image-source: var(--border-bottom-image);
-      border-image-slice: fill 0;
-      right: calc(anchor(right) - 1em);
-      top: calc(anchor(bottom) - 0.7ex);
-      z-index: -1;
-    }
-  }
-}
-
 section p {
   text-align: center;
   text-wrap: pretty;
@@ -192,13 +182,29 @@ section p {
 .news-list {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-rows: repeat(17, 1fr);
   @media screen and (min-width: 801px) {
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(8, 1fr);
   }
   grid-auto-flow: dense;
   gap: 1em;
+
+  header {
+    grid-column: span 2;
+  }
+
+  h2 {
+    margin: 0;
+  }
+
+  .cta {
+    place-self: center;
+    grid-column: span 2;
+    @media screen and (min-width: 801px) {
+      grid-column: span 4;
+    }
+  }
 
   article {
     container-type: inline-size;
@@ -207,6 +213,7 @@ section p {
     background-color: #000;
     color: #fff;
     padding: 10px;
+    grid-row: span 4;
 
     a {
       display: grid;
@@ -244,13 +251,13 @@ section p {
   }
 
   article:first-of-type {
-    grid-column: span 2;
-    grid-row: span 2;
+    grid-column: 1 / 3;
+    grid-row: span 7;
   }
 
   article+article p {
     font-size: 1em;
-    max-height: 4.2em;
+    max-height: 6em;
     overflow: hidden;
     text-overflow: ellipsis;
   }
@@ -268,9 +275,16 @@ section p {
   }
   gap: 1em;
 
+  header {
+    grid-column: span 2;
+  }
+  h2 {
+    margin: 0;
+  }
+
   article {
     grid-column: span 2;
-    grid-row: span 2;
+    grid-row: span 4;
 
     container-type: inline-size;
     display: grid;
@@ -302,23 +316,23 @@ section p {
       font-size: 0.75em;
       font-weight: 800;
       text-align: left;
-      margin: 0.5em 0 0.75em;
+      margin: 0.75em 0;
       order: 2;
     }
 
     &:first-of-type {
       grid-row-start: 2;
-      grid-row-end: 4;
+      grid-row-end: 6;
     }
     @container (min-width: 449px) {
       &:nth-of-type(2) {
-        grid-row-end: 3;
+        grid-row-end: 4;
       }
     }
     @container (min-width: 808px) {
       &:nth-of-type(3) {
-        grid-row-start: 2;
-        grid-row-end: 4;
+        grid-row-start: 1;
+        grid-row-end: 5;
       }
     }
   }
