--- a/src/html/shared/styles.njk
+++ b/src/html/shared/styles.njk
@@ -1,14 +1,13 @@
-<link rel="preload" href="{{ "barrio-regular.latin.woff2" | assetUrl("fonts") }}" as="font" type="font/woff2" crossorigin>
-<link rel="preload" href="{{ "border-top.svg" | assetUrl("images") }}" as="image">
-<link rel="preload" href="{{ "border-bottom.svg" | assetUrl("images") }}" as="image">
+<link rel="preload" href="{{ "bangers-regular.latin.woff2" | assetUrl("fonts") }}" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="{{ "cta-bg.svg" | assetUrl("images") }}" as="image">
 <link rel="preload" href="{{ "heading-bg.svg" | assetUrl("images") }}" as="image">
 <link rel="preload" href="{{ "horizontal-rule.svg" | assetUrl("images") }}" as="image">
-<link rel="preload" href="{{ "img-border.svg" | assetUrl("images") }}" as="image">
 <style>
   @font-face {
     font-family: Bangers;
     font-style: normal;
     font-display: swap;
+    /* TODO: use asset-url() CSS helper when postcss-html lands in Blendid */
     src: url({{ "bangers-regular.latin.woff2" | assetUrl("fonts") }}) format("woff2");
     unicode-range: U+0-FF, U+131, U+152, U+153, U+2BB, U+2BC, U+2C6, U+2DA, U+2DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
