--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -143,23 +143,16 @@ main, section, body > header, body > footer {
 body > header {
   --logo-color: var(--text-color);
   display: flex;
+  gap: 0.5em;
   align-items: center;
   justify-content: space-between;
 
   h1 {
-    height: 74px;
-    width: 166px;
-    display: flex;
-    gap: 0.5em;
     line-height: 1;
-    align-items: center;
-    font-size: 1.5em;
   }
 
   h1 svg {
-    height: 74px;
     width: auto;
-    flex-grow: 1;
   }
 
   nav {
@@ -179,17 +172,19 @@ body > header {
 }
 
 .header__time {
-  font: 1.75em var(--accented-font);
+  font: clamp(1.25rem, 0.5833rem + 2.2222vw, 1.75rem) var(--accented-font);
   margin: 0;
   text-align: center;
+  text-wrap: nowrap;
 }
 
 .header__location {
-  font-size: 0.825em;
+  font-size: clamp(0.625rem, 0.3583rem + 0.8889vw, 0.825rem);
   font-weight: bold;
   text-transform: uppercase;
   margin: 0;
   text-align: center;
+  text-wrap: balance;
 }
 
 section h2 {
@@ -490,6 +485,10 @@ section p {
     max-width: revert;
     margin: revert;
   }
+}
+
+#logo {
+  height: clamp(2.625rem, 1.9107rem + 2.381vw, 3.25rem);
 }
 
 #menu {
