--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -146,9 +146,14 @@ body > header {
   gap: 0.5em;
   align-items: center;
   justify-content: space-between;
+  position: sticky;
+  inset-block-start: 0;
+  z-index: 1000;
+  background-color: var(--background-color);
 
   h1 {
     line-height: 1;
+    margin: 0.25em 0;
   }
 
   h1 svg {
