--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -61,21 +61,9 @@
 
       <div class="tickets__list">
         <div class="tickets__item tickets__item--disabled">
-          <h3>1-denní</h3>
-          <p>1.&nbsp;vlna vstupenek</p>
-          <p>390&nbsp;Kč</p>
-          <a href="" class="button">Vyprodáno</a>
-        </div>
-        <div class="tickets__item tickets__item--disabled">
           <h3>2-denní</h3>
           <p>1.&nbsp;vlna vstupenek</p>
           <p>540&nbsp;Kč</p>
-          <a href="" class="button">Vyprodáno</a>
-        </div>
-        <div class="tickets__item tickets__item--disabled">
-          <h3>1-denní</h3>
-          <p>2.&nbsp;vlna vstupenek</p>
-          <p>490&nbsp;Kč</p>
           <a href="" class="button">Vyprodáno</a>
         </div>
         <div class="tickets__item tickets__item--disabled">
@@ -84,17 +72,30 @@
           <p>640&nbsp;Kč</p>
           <a href="" class="button">Vyprodáno</a>
         </div>
-        <div class="tickets__item">
-          <h3>1-denní</h3>
-          <p>3.&nbsp;vlna vstupenek</p>
-          <p>590&nbsp;Kč</p>
-          <a href="" class="button">Koupit</a>
-        </div>
-        <div class="tickets__item">
+        <div class="tickets__item  tickets__item--disabled">
           <h3>2-denní</h3>
           <p>3.&nbsp;vlna vstupenek</p>
           <p>740&nbsp;Kč</p>
+          <a href="" class="button">Vyprodáno</a>
+        </div>
+        <div class="tickets__item">
+          <h3>1-denní</h3>
+          <p>4.&nbsp;vlna vstupenek</p>
+          <p>690&nbsp;Kč</p>
           <a href="https://goout.net/cs/listky/studnice-fest-2024/ayit/" class="button">Koupit</a>
+        </div>
+        <div class="tickets__item">
+          <h3>2-denní</h3>
+          <p>4.&nbsp;vlna vstupenek</p>
+          <p>790&nbsp;Kč</p>
+          <a href="https://goout.net/cs/listky/studnice-fest-2024/ayit/" class="button">Koupit</a>
+        </div>
+        <div class="tickets__item">
+          <h3>Na místě</h3>
+          <p>2-denní</p>
+          <p>990&nbsp;Kč</p>
+          <p>1-denní</p>
+          <p>890&nbsp;Kč</p>
         </div>
       </div>
 
