Moved map to info page only

--- a/src/html/informace/index.njk
+++ b/src/html/informace/index.njk
@@ -1,12 +1,115 @@
 {% extends 'layouts/master.njk' %}
 
+{% set title = "Důležité informace" %}
+
+{% block head %}
+  <style>
+    .main {
+      display: flex;
+      flex-flow: row-reverse;
+    }
+    .main aside {
+      flex-grow: 2;
+      min-width: 18em;
+    }
+  </style>
+{% endblock %}
+
 {% block content %}
   <main>
     <hgroup>
       <h2>Důležité informace</h2>
       <p>Co by měl každý návštěvník vědět, než na Studnici vyrazí?</p>
     </hgroup>
-    {% markdown "informace/text.md" %}
+    <div class="main">
+      <article>
+        {% markdown "informace/text.md" %}
+      </article>
+      <aside>
+        <nav>
+          <ol>
+            <li><a href="#podrobněji-ke-vstupenkám">Podrobněji ke vstupenkám</a></li>
+            <li><a href="#doprava">Doprava</a></li>
+            <li><a href="#parkování-a-stanování">Parkování a stanování</a></li>
+            <li><a href="#platby-v-rámci-areálu">Platby v rámci areálu</a></li>
+            <li><a href="#vstup-do-areálu">Vstup do areálu</a></li>
+            <li><a href="#jídlo-a-pití">Jídlo a pití</a></li>
+            <li><a href="#stage-na-vyhlídce-dětský-stan-a-doprovodný-program">Stage Na vyhlídce, dětský stan a doprovodný program</a></li>
+            <li><a href="#počasí-a-koupání">Počasí a koupání</a></li>
+            <li><a href="#mapa">Mapa</a></li>
+          </ol>
+        </nav>
+      </aside>
+    </div>
+    <article id="mapa">
+      <header>
+        <h2>Mapa</h2>
+      </header>
+      <p>Studnice Fest 2024&nbsp;se bude konat na tradičním místě, v&nbsp;areálu Cihelka
+        <strong>(A)</strong> na okraji Hlinska v&nbsp;Čechách. V&nbsp;těsné blízkosti
+        areálu budou vyhrazené prostory k&nbsp;parkování <strong>(P)</strong>
+        i&nbsp;stanování <strong>(S)</strong>.</p>
+      <div id="map" class="smap"></div>
+    </article>
   </main>
+{% endblock %}
 
+{% block javascript %}
+<script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
+        integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg=" crossorigin defer></script>
+<script type="module">
+  import {html} from "https://unpkg.com/uhtml@4.5.9/node.js";
+
+  document.head.appendChild(html`
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
+        integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14=" crossorigin>`);
+
+    const API_KEY = "S9n6dfE_8AfjsNvRxSwAmFV4-1z5tfk5W7IUajp2D3I";
+    const map = L.map("map", {
+      center: [49.752936007489765, 15.930369570851326],
+      zoom: 16
+    });
+    L.tileLayer(`https://api.mapy.cz/v1/maptiles/outdoor/256/{z}/{x}/{y}?apikey=${API_KEY}`, {
+      minZoom: 0,
+      maxZoom: 19,
+      detectRetina: true,
+      attribution: `<a href="https://api.mapy.cz/copyright" target="_blank">&copy; Seznam.cz a.s. a další</a>`,
+    }).addTo(map);
+    const LogoControl = L.Control.extend({
+      options: {position: "bottomleft"},
+      onAdd(map) {
+      return html`
+        <div>
+          <a href="https://mapy.cz/" target="_blank" @click=${e => e.stopPropagation()}>
+            <img alt="Mapy.cz" src="https://api.mapy.cz/img/api/logo.svg" loading="lazy"></a>
+        </div>
+      `;
+    },
+    })
+    new LogoControl().addTo(map);
+    const poiArealIcon = L.icon({
+      iconUrl: "{{ "poi-areal.svg" | assetUrl("images") }}",
+    iconSize: [37, 46],
+    iconAnchor: [18, 38],
+  });
+  L.marker([49.753234071335086, 15.930165722966194], {
+    alt: "A",
+    title: "Areál Cihelka",
+    icon: poiArealIcon
+  }).addTo(map);
+
+  const poiParkingIcon = L.icon({
+    iconUrl: "{{ "poi-parking.svg" | assetUrl("images") }}",
+    iconSize: [37, 46],
+    iconAnchor: [18, 38],
+  });
+  L.marker([49.7526861, 15.9341575], { alt: "P", title: "Parkoviště", icon: poiParkingIcon }).addTo(map);
+
+  const poiTentsIcon = L.icon({
+    iconUrl: "{{ "poi-tents.svg" | assetUrl("images") }}",
+    iconSize: [37, 46],
+    iconAnchor: [18, 38],
+  });
+  L.marker([49.7529775, 15.9336425], { alt: "S", title: "Stanování", icon: poiTentsIcon }).addTo(map);
+</script>
 {% endblock %}
