--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -1,5 +1,7 @@
 {% extends 'layouts/master.njk' %}
 
+{% block title %}Studnice fest 2024{% endblock %}
+
 {% block head %}
   <meta name="description" content="{{ event.description }}">
   <meta property="fb:app_id" content="117540538260775">
@@ -7,6 +9,7 @@
   <meta property="og:site_name" content="{{ event.name }}">
   <meta property="og:description" content="{{ event.description }}">
 {% endblock %}
+
 {% block content %}
   <main>
     <header class="hero">
