--- a/src/html/informace/index.njk
+++ b/src/html/informace/index.njk
@@ -5,12 +5,29 @@
 {% block head %}
   <style>
     .main {
-      display: flex;
-      flex-flow: row-reverse;
+      display: grid;
+      grid-template: "aside" "article";
+      gap: 1em;
+    }
+    @media screen and (min-width: 481px) {
+      .main {
+        grid-template: "aside article";
+        grid-template-columns: clamp(8rem, 2.6667rem + 17.7778vw, 12rem) 1fr;
+      }
     }
     .main aside {
-      flex-grow: 2;
-      min-width: 18em;
+      grid-area: aside;
+      min-width: clamp(8rem, 2.6667rem + 17.7778vw, 12rem);
+      font: clamp(1rem, 0.6667rem + 1.1111vw, 1.25rem) var(--accented-font);
+    }
+    .main aside ol {
+      list-style-type: none;
+      margin: 0.8em 0 0;
+      padding: 0;
+    }
+    .main aside ol li {
+      padding: 0.3em 0;
+      text-wrap: balance;
     }
   </style>
 {% endblock %}
@@ -61,23 +78,23 @@
   import {html} from "https://unpkg.com/uhtml@4.5.9/node.js";
 
   document.head.appendChild(html`
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
         integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14=" crossorigin>`);
 
-    const API_KEY = "S9n6dfE_8AfjsNvRxSwAmFV4-1z5tfk5W7IUajp2D3I";
-    const map = L.map("map", {
-      center: [49.752936007489765, 15.930369570851326],
-      zoom: 16
-    });
-    L.tileLayer(`https://api.mapy.cz/v1/maptiles/outdoor/256/{z}/{x}/{y}?apikey=${API_KEY}`, {
-      minZoom: 0,
-      maxZoom: 19,
-      detectRetina: true,
-      attribution: `<a href="https://api.mapy.cz/copyright" target="_blank">&copy; Seznam.cz a.s. a další</a>`,
-    }).addTo(map);
-    const LogoControl = L.Control.extend({
-      options: {position: "bottomleft"},
-      onAdd(map) {
+  const API_KEY = "S9n6dfE_8AfjsNvRxSwAmFV4-1z5tfk5W7IUajp2D3I";
+  const map = L.map("map", {
+    center: [49.752936007489765, 15.930369570851326],
+    zoom: 16
+  });
+  L.tileLayer(`https://api.mapy.cz/v1/maptiles/outdoor/256/{z}/{x}/{y}?apikey=${API_KEY}`, {
+    minZoom: 0,
+    maxZoom: 19,
+    detectRetina: true,
+    attribution: `<a href="https://api.mapy.cz/copyright" target="_blank">&copy; Seznam.cz a.s. a další</a>`,
+  }).addTo(map);
+  const LogoControl = L.Control.extend({
+    options: {position: "bottomleft"},
+    onAdd(map) {
       return html`
         <div>
           <a href="https://mapy.cz/" target="_blank" @click=${e => e.stopPropagation()}>
@@ -85,10 +102,10 @@
         </div>
       `;
     },
-    })
-    new LogoControl().addTo(map);
-    const poiArealIcon = L.icon({
-      iconUrl: "{{ "poi-areal.svg" | assetUrl("images") }}",
+  })
+  new LogoControl().addTo(map);
+  const poiArealIcon = L.icon({
+    iconUrl: "{{ "poi-areal.svg" | assetUrl("images") }}",
     iconSize: [37, 46],
     iconAnchor: [18, 38],
   });
