--- a/src/html/informace/index.njk
+++ b/src/html/informace/index.njk
@@ -3,6 +3,8 @@
 {% set title = "Důležité informace" %}
 
 {% block head %}
+  <link rel="preconnect" href="https://unpkg.com">
+  <link rel="preconnect" href="https://api.mapy.cz">
   <style>
     .main {
       display: grid;
