Fix headers in grid

--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -25,8 +25,7 @@
       <div><a href="https://goout.net/cs/listky/studnice-fest-2024/ayit/" class="cta">Koupit si vstupenky</a></div>
     </header>
     <section class="news-list" id="novinky">
-      <a name="news"></a>
-      <header>
+      <header id="news">
         <h2>Novinky</h2>
       </header>
       {% for post in news %}
@@ -55,8 +54,7 @@
       </header>
     </section>
     <section class="artists-list" id="vystoupi">
-      <a name="bands"></a>
-      <header>
+      <header id="bands">
         <h2>Na 18. ročníku vystoupí</h2>
       </header>
       {% for key in event.artists %}
